--- a/DD/references.bib
+++ b/DD/references.bib
@@ -1,1 +1,7 @@
-k
+@book{archroyfielding,
+  title={Architectural styles and the design of network-based software architectures},
+  author={Fielding, Roy T and Taylor, Richard N},
+  volume={7},
+  year={2000},
+  publisher={University of California, Irvine Doctoral dissertation}
+}
