--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -242,11 +242,9 @@
         \hfill
         
         \centering
-        \includegraphics[width=80mm, keepaspectratio]{images/UML/state_sos.jpg}
-        \hfill
+        \includegraphics[width=70mm, keepaspectratio]{images/UML/state_sos.jpg}
         
-        \centering
-        \includegraphics[width=60mm, keepaspectratio]{images/UML/state_run.jpg}
+        \includegraphics[width=55mm, keepaspectratio]{images/UML/state_run.jpg}
         \caption{State Charts}
     \end{figure}
     
@@ -663,7 +661,7 @@
         \actor{Guest.}
         \pre{The individual has a valid SSN/FC and he has selected the \textit{Individual} option in the Registration page.}
         
-        \bflow{The system asks to provide username, password, SSN/FC (based on region) and user personal information such as name, surname, age, gender, e-mail, nationality and optional notes about his health condition.}
+        \bflow{The system asks to provide username, password, SSN or FC based on region and user personal information such as name, surname, age, gender, e-mail, nationality and optional notes about his health condition.}
               {The individual fills out the requested information and presses the confirm button.}
               {The system registers that user as an Individual and adds it to the  Database.}
         \post{The individual is successfully registered as an Individual.}
