--- a/RASD/frontpage.tex
+++ b/RASD/frontpage.tex
@@ -22,7 +22,7 @@
     \fontsize{22px}{8mm}\selectfont \textsc{\textbf{Requirement Analysis and\\ Specification Document}}
 \end{center}
 \begin{center}
-    \fontsize{14px}{4mm}\selectfont \textsc{{Draft Version 0.5 - 9/11/2018 - Rev 3.0}}
+    \fontsize{14px}{4mm}\selectfont \textsc{{Version 1.0 - 10/11/2018}}
 \end{center}
 \hfill
 \hfill
