Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -366,13 +366,12 @@
         
         The mobile application shall provide login and two different registration interfaces for both individual and third parties. The users would also be able to manage their profile page.
         
-        \textit{TrackMe} shall provide an ease of use management interface for requests handling. Moreover, a data management page for Third Parties shall be present in order to allow customers to manege requested data.
-        
+        \textit{TrackMe} shall provide an ease of use management interface for requests handling. Moreover, a data management page for Third Parties shall be present in order to allow customers to manage requested data.
         In addition, for Track4Run users, the system shall provide all the facilities to create, enroll and watch a run.
         
         \subsubsection{Hardware Interfaces}
+        The Individuals need a smartphone and an external device capable of data acquisition. The external device also needs a way to communicate with the smartphone that should be NFC and/or BT.
         The GPS system of the smartphone or the one of the external device (if connected) is needed in order to track customer's position.
-        
         Furthermore, a separate system to notify the ambulances in case of accident shall be integrated within already existing ambulances' on-board technologies. This system and further interactions with \textit{TrackMe} are out of scope of this specification document.
         
         \subsubsection{Software Interfaces}
