--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -791,11 +791,12 @@
         \begin{usecase}{Assign Ambulance}
         \brief{The Dispatcher will assign an ambulance to an individual, related to a particular Third-Party, whose actual data has overcame a certain limit.}
         \actor{Third Party, Individual, Ambulance Dispatcher, Ambulance.}
-        \pre{At least one ambulance must be available; the Third Party must have enabled Automated-SOS. The individual has selected that Third-Party to provide the service of Automated SOS. The Individual security threshold has been overcame.}
+        \pre{At least one ambulance must be available; the Third Party must have enabled Automated-SOS. The Individual has selected that Third-Party to provide the service of Automated SOS. The Individual health parameters are under a certain threshold that depends on the health parameter.}
         \bflow{TrackMe checks the Individual's health parameters and finds that he has overcame the thresholds.}
-              {The ambulance Dispatcher checks in the ambulance database the nearest one available.}
-              {TrackMe sends to the selected ambulance a request with the GPS position of the subject in danger.}
-              {The ambulance selected should accept the request, otherwise Automated-SOS will notify the second ambulance available and so on until the request is accepted.}
+            {TrackMe sends to the Ambulance Dispatcher a request with the GPS position of the subject in danger.}
+              {The Ambulance Dispatcher checks in the ambulance database the nearest one available.}
+              {The Ambulance Dispatcher request the ambulance found in point c).}
+              {The ambulance selected should accept the request, otherwise Ambulance Dispatcher will request the second ambulance available and so on until the request is accepted.}
         \post{An ambulance will go to the position of the Individual.} 
         \end{usecase}
         
@@ -922,17 +923,17 @@
                 {\ref{The system must be able to periodically query the database in order to get new data as soon as they are produced.}}
                 {\ref{Subscribe to New Data}}
                 {}
-                \con{\ref{The Individual should be able to accept or reject a request coming from a Third-Party.}}
+            \con{\ref{The Third Party should be able to view Individual's data to whom has sent a request.}}
+                {\ref{Data4help must allow the Third Party to see a list of sent requests and related Individual's data.}}
+                {\ref{View Data}}
+                {}
+            \con{\ref{The Individual should be able to accept or reject a request coming from a Third-Party.}}
                 {\ref{Data4help must allow the Individual to accept or reject a request from the list.}}
                 {\ref{Manage Request}}
                 {}
-                \con{\ref{The Individual should be able to accept or reject a request coming from a Third-Party.}}
+            \con{\ref{The Individual should be able to accept or reject a request coming from a Third-Party.}}
                 {\ref{Data4help must allow the Individual to see a list of the received requests from Third Parties.}}
                 {\ref{Manage Request}}
-                {}
-                \con{\ref{The Third Party should be able to view Individual's data to whom has sent a request.}}
-                {\ref{Data4help must allow the Third Party to see a list of sent requests and related Individual's data.}}
-                {\ref{View Data}}
                 {}
             \con{\ref{The Individual shall be able connect an external device to the system.}}
                 {\ref{Data4help must allow the Individual to connect an external device through BT or NFC.}}
@@ -950,7 +951,7 @@
                 {\ref{The system must allow the Individual to activate Automated-SOS service.}}
                 {\ref{Enable Automated-SOS Individual}}
                 {}
-                \con{\ref{The Individual shall be able to activate Automated-SOS service.}}
+            \con{\ref{The Individual shall be able to activate Automated-SOS service.}}
                 {\ref{The system should allow the Individual to choose between third parties who has enabled the service.}}
                 {\ref{Enable Automated-SOS Individual}}
                 {}
@@ -1008,7 +1009,9 @@
         The software application shall be usable for all people including elder ones and not \textit{computers} or \textit{smart-things} experts. Ease of use of both the mobile and the web application are (strictly) needed.
         
         \subsubsection{Reliability}
-        The system should work without failures in 99,99\% of the cases. The possibility of a breakdown depends on the stability of the Internet connection and on the availability of the external services such as the Ambulance Dispatcher. In this case the users wont be able to access the system and, in case of accident, no ambulance will receive a call and the user must be informed that the service is unavailable. In case of failure the mean time to repair should be a reasonable time, for example less than 2 days.
+        The system should work without failures in 99,99\% of the cases. The possibility of the service success depends on the stability of the Internet connection and on the availability of the external services such as the Ambulance Dispatcher. In this case the users wont be able to access the system and, in case of accident, no ambulance will receive a call and the user must be informed that the service is unavailable.
+        In case of general system failure the mean time to repair should be less than 2 days.
+        In case of specific Automated-SOS service failure the mean time to repair should be less than 6 hours.
        
         \subsubsection{Availability}
         To guarantee the maximum profit by the service, in particular the one provide by Automated-SOS, the system must be available 24 hours per day and 7 day per week; availability shall also be granted by at least one "ambulance dispatcher". For the two other features \textit{Data4Help} and \textit{Track4Run}, small deviations from this requirement will be acceptable.
@@ -1017,15 +1020,15 @@
         The user allows the system to collect their health data. Furthermore, the position of the user is also present in the system, to provide services such as Automated SOS and Track4Run. If there is a leak of information the privacy of the user is compromised. For this reason at least these security features shall be granted:
        
         \begin{itemize}
-        \item         The users passwords are stored in the database hashed with SHA-256.
+        \item The users passwords are stored in the database hashed with SHA-256.
         \item The connection between the client and server is encrypted and sent over SSL to guarantee integrity of data. 
         \end{itemize}
         \subsubsection{Maintainability}
 
-        The system is backed up 2 times a  week, in order to guarantee the database integrity and consistency. To avoid loss of data  the database is saved in at least two copies and the power supply is provided by a particular system that keeps online at least one database. Moreover, an UPS for each \textit{Data Center} shall be present.
+        The system is backed up 2 times a  week, in order to guarantee the database integrity and consistency. To avoid loss of data  the database is saved in at least two copies and the power supply is provided by a particular system that keeps online at least one database. Moreover an UPS for each \textit{Data Center} shall be present.
         \subsubsection{Portability}
-
-        The system can work both on smart phone and desktop environment. Any personal computer with Java SDK installed can execute TrackMe server. Different version of Android and iOS can should support the front-end application.
+        The system is expected to have a long life and it's expected to run on major os such as Windows, MacOs and Linux.
+        The front-end application should work on at least on Android Lollipop 5.0 and iOS5 or major versions.
 
         The developers shall consider that the \textit{E-Health} applications area is a wide and promising market slice thus, in order to be competitive, they should guarantee an high level portability through interactions with other existing widely used software applications and hardware interfaces.
         
