Updates from ShareLaTeX

--- a/DD/main.tex
+++ b/DD/main.tex
@@ -37,7 +37,7 @@
     Furthermore this document provides also an \textit{Implementation \& Test} plan.
  
     \subsection{Scope}
-    \textit{TrackMe} system has been project in such a way that it is a service available on web and mobile application. The subjects the should use this service can belong to two different categories:
+    \textit{TrackMe} system has been projected in such a way that it is a service available on web and mobile application. The subjects should use this service can belong to two different categories:
     \newline
     \begin{itemize}
     
@@ -48,7 +48,7 @@
     \end{itemize}
     
    
-   \textit{TrackMe} give allows Third-Party to access Individual's health data exploiting the functionalities of \textit{Data4help} section of \textit{TrackMe}. The Third-Parties can make Individual, or group request. the Individuals  can accept or not Third-parties' requests. The application may also allow individual users to connect external  devices such as smart-watches or similar, to perform a more detailed data acquisition and monitoring. 
+   \textit{TrackMe} allows Third-Party to access Individual's health data exploiting the functionalities of \textit{Data4help} section of \textit{TrackMe}. The Third-Parties can make Individual, or group request. the Individuals  can accept or not Third-parties' requests. The application may also allow individual users to connect external  devices such as smart-watches or similar, to perform a more detailed data acquisition and monitoring. 
    \newline
    
    
