Updates from ShareLaTeX

--- a/RASD/main.tex
+++ b/RASD/main.tex
@@ -754,7 +754,7 @@
         
         \begin{usecase}{Connect External Device}
         \brief{An Individual can connect External Device that allows the system to collect data.}
-        \actor{Individual, TrackMe.}
+        \actor{Individual, External Device, TrackMe.}
         \pre{The Individual is in the home page and he pressed the \textit{'Connect External Device'} button.}
         \bflow {The system provides two drop-down menus that allows the user specify the type of device and which kind of wireless connection uses: Bluetooth or NFC.}
         {The user selects the desired option and checks the type of connection, than presses the \textit{Confirm} button.}
