--- a/DD/main.tex
+++ b/DD/main.tex
@@ -28,56 +28,43 @@
 \pagenumbering{arabic}
 
 \section{Introduction}
-
 \subsection{Purpose}
-    The Purpose of this Design Document is to provide, in a more specific and technical way with regard to the RASD, all the details of \textit{TrackMe} system.
+    The Purpose of this Design Document is to provide, in a more specific and technical way with respect to the RASD, all the details of \textit{TrackMe} system \cite{rasd}. The \textit{Requirement Analysis and Specification Document} is also recommended to developer aimed at implementing the proposed system.
     
-    In particular, this document is addressed to  developers team. Through this paper they can better understand and identify: the main components and their interfaces and their behaviours, the high level architecture and its interaction with architectural components; style and design patterns that shall be used in deployment of the application.
+    The purpose of this paper is to point out the main components, their interfaces and their behaviours, show the high level architecture and its interaction with architectural components and to identify style and design patterns that shall be used in deployment of the application.
     
-    Furthermore this document provides also an \textit{Implementation \& Test} plan.
+    Furthermore this document provides also an \textit{Implementation \& Test} plan in order to give to the developer a precise idea of the deployment process.
  
-    \subsection{Scope}
+\subsection{Scope}
+   \textit{TrackMe} allows Third-Party to access Individual's health data exploiting the functionality of \textit{Data4help} service. The Third-Parties can make individual requests that the Individuals can accept or reject, or group requests handled directly by TrackMe that approves them if it is able to properly anonymize the requested data. For sake of simplicity, we already assumed that TrackMe will accept any request for which the number of individuals whose data satisfy the request is higher than 1000. The application may also allow individual users to connect external devices such as smart-watches, specific pathology's monitoring devices or other types of external devices able to monitor health parameters with BT or NFC connection.
 
-    \textit{TrackMe} system has been projected in such a way that it is a service available on web and mobile application. The subjects should use this service can belong to two different categories:
-    \newline
+   In addition, the third-party may also provide a personalized and non intrusive SOS service interfaced with an ambulance dispatcher.
+   This system permits to enable the \textit{Automated-SOS} service that guarantees that the GPS position of the user who has enabled \textit{Automated SOS}, can be send to the nearest ambulance available, when user's health parameters overcome some critical thresholds. This procedure takes place thanks to an ambulance dispatcher, which is connected to the Third-Party (which has enabled automated-SOS too), that has been selected by that individual to provide this service
+   
+   Moreover, through  the \textit{Track4Run} service, \textit{TrackMe} allows \textit{Organizers} (that are individuals)  to  \textit{create}  a  new  run:  a  competition  in  which other individuals can either participate as \textit{athletes} or watch as \textit{spectators}.  Additionally, this feature guarantees other services for keeping track of athletes progresses during the run, providing an interactive map of the run, with runners position on it.
 
-    \begin{itemize}
+    This Document will provide detailed explanation of each functionality through components and sequence diagrams also used to explain to programmers the overall structure of the system in a precise and implementation oriented way.
     
-    \item{Individuals}
-    
-    \item{Third-Party}
-    
-    \end{itemize}
-    
-
-   \textit{TrackMe} allows Third-Party to access Individual's health data exploiting the functionalities of \textit{Data4help} section of \textit{TrackMe}. The Third-Parties can make Individual, or group request. the Individuals  can accept or not Third-parties' requests. The application may also allow individual users to connect external  devices such as smart-watches or similar, to perform a more detailed data acquisition and monitoring. 
-   \newline
-
-   
-   
-   In addition, the third-party may also provide a personalized and non intrusive SOS service for elderly people who requested it.
-   The system permits to enable the \textit{Automated-SOS} service that guarantees that the GPS position of an user, who has enabled \textit{Automated SOS}, can be send to the nearest ambulance available, when user's health parameters overcome some critical thresholds. This procedure takes place thanks to an ambulance dispatcher, which is connected to the Third-Party (which has enabled automated-SOS too), that has been selected by that individual to provide this service
-   
-   
-   
-   Moreover,  through  the \textit{Track4Run} service, \textit{TrackMe} allows \textit{Organizers} (that are individuals)  to  \textit{create}  a  new  run:  a  competition  in  which other individuals can either participate as \textit{athletes} or watch as \textit{spectators}.  Additionally, this feature guarantees other services for keeping track of athletes progresses during the run, providing an interactive map of the run, with runners position on it.
-
 \subsection{Definition, Acronyms and  Abbreviations}
-           
+            \subsubsection{Keywords}
+            The key words “MUST”, “MUST NOT”, “REQUIRED”, “SHALL”, “SHALL NOT”, “SHOULD”, “SHOULD NOT”, “RECOMMENDED”, “MAY”, and “OPTIONAL” in this document are to be interpreted as described in RFC 2119 \cite{bradner1997key}.
+            
             \subsubsection{Definition of Terms}
             This document uses several terms that might be more loosely used elsewhere. These terms are defined here as they will be used later on in this document.
                 \begin{description}
-                    \item[\textbf{Subscribed User}] an individual for which one or more third party have done a request accepted by the individual itself
+                    \item[\textbf{Subscribed User}] an Individual for which one Third Party whom asked to subscribe to the data has accepted the Third Party's request
                     
-                    \item[\textbf{External Device}] an external device such as a smart-watch or similar devices
+                    \item[\textbf{External Device}] a device such as a smart-watch or similar, capable of data acquisition
                     
                     \item[\textbf{Run}] a competition organized and managed by an \textit{Organizer} to which \textit{Athletes} and \textit{Spectators} can enroll as participant or watchers
                     
                     \item[\textbf{Run Started}] a competition with at least two \textit{Athletes} enrolled that the \textit{Organizer} has started
                     
-                    \item[\textbf{Run Not-Started}] a competition with any number of \textit{Athletes} enrolled
+                    \item[\textbf{Run Created}] a competition with any number of \textit{Athletes} enrolled
                     
-                    \item[\textbf{Map}] The map of the predefined track of the run with athletes' positions
+                    \item[\textbf{Track}] A route where athletes will compete in a specific \textit{Run}
+                    
+                    \item[\textbf{Map}] A \textit{Track} that display all \textit{Athletes} position in a specific \textit{Run}
                     
                     \item[Accident] An event triggered when the monitored user's parameter overcome certain thresholds
                     
@@ -93,168 +80,108 @@
                     
                     \item[\textbf{Personal Data}] users' data of different kind either for Individuals (name, surname, age, etc.) or for Third-Parties such as Organization name, number of employees or VAT number
                 \end{description}
-                
             
             \subsubsection{Acronyms}
             \begin{acronym}
                 \acro{DD}{Design Document}
                 \acro{UML}{Unified Modelling Language}
+                \acro{SQL}{Structured Query Language}
+                \acro{noSQL}{Not Only SQL}
                 \acro{REST}{REpresentational State Transfer}
                 \acro{API}{Application Programming Interface}
+                \acro{RASD}{Requirement Analysis and Specification Document}
+                \acro{UX}{User eXperience}
             \end{acronym}
             
-            \subsubsection{Abbreviations}
-            
 \subsection{Reference Documents}
-
 \printbibliography[heading=none]
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newpage
-
 \subsection{Document Structure}
-%% questa parte è presa pari pari dal DD su beep
-
-
 \begin{itemize}
-    \item \textbf{Introduction}: this section introduces the design document. It contains
-a justification of his utility and indications on which parts are covered in
-this document that are not covered by RASD.
+    \item \textbf{Introduction}: this section is aimed at giving to the reader an overview of the document;
 
-\item \textbf{Architecture Design}: this section is divided into different parts:
+\item \textbf{Architecture Design}:
 \begin{enumerate}
-    \item Overview : this sections explains the division in tiers of our application
-    
-    \item High level components and their interaction : this sections gives
-a global view of the components of the application and how they
-communicate
+    \item \textit{High Level Components and their Interaction}: gives a global view of the components of the application and how they communicate;
 
-    \item Component view : this sections gives a more detailed view of the
-components of the applications
+    \item \textit{Component View}: gives a more detailed view of the components of the applications through UML component diagrams;
 
-    \item Deploying view : this section shows the components that must be
-deployed to have the application running correctly.
+    \item \textit{Deployment View}: shows UML deployment diagrams and their explanations;
 
-    \item Runtime view : sequence diagrams are represented in this section to
-show the course of the different tasks of our application
+    \item \textit{Runtime View}: presents UML sequence diagrams in order to show the event flow of the different tasks of the application;
 
-    \item Component interfaces : the interfaces between the components are
-presented in this section
+    \item \textit{Component Interfaces}: presents the interfaces between the components;
 
-    \item Selected architectural styles and patterns : this section explain the
-architectural choices taken during the creation of the application
+    \item \textit{Selected Architectural Styles and Patterns}: explain the architectural choices done during the design of the application and design patterns;
 
-    \item Other design decisions
-    
+    \item \textit{Other design decisions};
 \end{enumerate}
 
+\item \textbf{Algorithms Design}: this chapter describes the most critical parts via some algorithms. Pseudo code is used in order to hide unnecessary implementation details and in order to focus on the most important parts;
 
-\item \textbf{Algorithms Design}: this section describes the most critical parts via
-some algorithms. Pseudo code is used in order to hide unnecessary implementation
-details in order to focus on the most important parts.
+\item \textbf{User Interface Design}: this part presents mockups and user experience explained via mockups and UX diagrams;
 
-
-\item \textbf{User Interface Design}: this section presents mock ups and user experience
-explained via UX and BCE diagrams
-
-
-\item \textbf{Requirements Traceability}: this section aims to explain how the decisions
-taken in the RASD are linked to design elements
+\item \textbf{Requirements Traceability}: this section aims to explain how the decisions taken in the RASD are linked to design elements in the Design Document.
 \end{itemize}
 
 \newpage
-
 \section{Architectural Design}
+\subsection{High Level Components and their Interaction}
+The system is deployed on three different tiers: the data layer, the application layer and the presentation layer, that are respectively mapped on the three main components of the software application.
+\begin{figure}[!htpb]
+    	\centering
+    	\includegraphics[width=100mm,keepaspectratio]{images/highlevel.png}
+\end{figure}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5
+The main component is the system itself and includes both the \textit{Web Server} and the \textit{Application Server}. The former communicates in synchronous way over HTTPS with client browser or mobile application, while the latter manages all the application logic and it is interfaced with the \textit{Data Layer}. Furthermore, the \textit{Presentation Layer} can also \textit{consume} REST services made available by the \textit{Application Server}. The \textit{Data Layer} instead is composed of two sub-components: a classic SQL database or optionally a less traditional noSQL database (e.g. MongoDB).
 
-%questa sezione richiede uno studio aprofondito, ne do un abbozzo e poi ne discutiamo insieme, serve anche un diagramma-schema
-
-On the client side it is possible a communication with the server through a module that can send API calls to the server. This can be done both with the mobile applications and with browser on web applications.
-%%dovremmo forse utilizzare solo una mobile app ?
-The data server is separeted by the Application one.
-
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\subsection{Overview: High-level components and their interaction}
-
-The components that characterise our system are:
-
+Moreover, both the \textit{Application Layer} and the \textit{Presentation Layer} should interact with external services:
 \begin{itemize}
-    \item \textbf{Application Server}: This tier comprises all the logic of the application system. This includes the main algorithms and the logic to interact with external systems
-    
-    \item \textbf{Mobile Application}: The presentation layer.
-it allows to communicate with the application server and the only logic used is the presentation one .
-
-   \item \textbf{Database} The data layer of the system; it enclose all the structures for data management. The only logic present is the Database Management system, DBMS. It ensures that the ACID properties are granted.
+    \item The \textit{Mobile Application} may be connected with an external device such as smart-watches, specific pathology's monitoring devices or other types of external devices able to monitor health parameters with BT or NFC connection;
+    \item The \textit{Application Server} should be able to communicate with ambulances in order to send them individual's position and notify them in case of accident.
 \end{itemize}
 
-%%completare questa sezione, magari con uno schema con relativa descrizione, basandosi sulla versione precedente
+\subsection{Component View}
+
+\subsection{Deployment View}
+
+\subsection{Runtime View}
+
+\subsection{Component Interfaces}
+
+\subsection{Selected Architectural Styles and Patterns}
+    \subsubsection{Architecture Style}
+    \subsubsection{Design Patterns}
+    \subsubsection{RESTful API}
+    \begin{table}[!htpb]
+        \begin{tabular}{|p{3cm}|p{1.8cm}|p{1.8cm}|p{1.8cm}|p{1.8cm}|} 
+         \hline
+         \textbf{Resource} & \textbf{GET} & \textbf{POST} & \textbf{PUT} & \textbf{DELETE} \\
+         \hline
+         \textit{trackMe/individual} & sth &like & this & ? \\
+         \hline
+        \end{tabular}
+    \end{table}
+
+\subsection{Other Design Decisions}
 
 \newpage
-
-\subsection{Component view}
-
-\subsubsection{Presentation layer}
- 
-    
-    \begin{figure}[!htpb]
-        \centering
-        \includegraphics[width=\textwidth]{DD/images/CP.jpg}
-        \caption{Component diagram: presentation layer}
-    \end{figure}
-    
-    \newpage
-
-\subsubsection{logic layer}
-
-\newpage
-
-\subsubsection{Data layer}
-
-\newpage
-
-\subsection{Deployment view}
-
-
-\newpage
-
-
-\subsection{Runtime view}
-
-\newpage
-
-\subsection{Component interfaces}
-
-\newpage
-
-\subsection{Selected architectural styles and patterns}
-
-\newpage
-
-\subsection{Other design decisions}
-
-\newpage
-
 \section{User Interface Design}
+As specified in RASD there are two different user interfaces, one for mobile application and one for web browsers. In this specification we assume the web version of the application will be the same as the mobile application with reduced functions.
 
-%improve the image layout
-The guest who access to the main page can sign-up to the application providing his credentials. Once clicked on the \textit{Sign On} button the guest can decide whether registers as an Individual or as a Third-Party, swiping left and right to choose the wright option. Once registered, on initial page, an user can sign-in in the application inserting Username and Password in the relative boxes and clicking on the \textit{Sign} In button. 
+\subsection{Mockups}
+The guest who access to the main page can sign-up to the application providing his credentials. Once clicked on the \textit{Sign On} button the guest can decide whether registers as an Individual or as a Third-Party, swiping left and right to choose the wright option. Once registered, on initial page, an user can sign-in in the application inserting Username and Password in the relative boxes and clicking on the \textit{Sign In} button. 
 
-%mock-up figures
 \begin{figure}[!htpb]
     	\centering
     	\includegraphics[height=50mm]{images/mockups/Login_Registration.png}
     	\includegraphics[height=50mm]{images/mockups/RegistrationForm.png}
     	\includegraphics[height=50mm]{images/mockups/ThirdPartyRegistration.png}
-    	
-    	
         \end{figure}
 
-When, inside the application, the user is redirected to the home page, where he can see the last activities, and where he can sign out from \textit{TrackMe}. Swiping left he can access to the profile page which is different whether he is signed as an Individual or Third-Party. Here they can access to the services provided by \textit{Data4help} and the can enable \textit{Automated-SOS} too. The Individual can swipe again to access the \textit{Track4Run} section.
+Once inside the application, the user is redirected to the home page, where he can see the last activities and sign out from \textit{TrackMe}. Swiping left he can access to the profile page which is different whether he is signed in as an Individual or Third-Party. Here the user can access to services provided by \textit{Data4help} and can enable \textit{Automated-SOS} service too. Swiping right instead, the Individual can access to \textit{Track4Run} section.
 
 \begin{figure}[!htpb]
     	\centering
@@ -263,7 +190,7 @@ When, inside the application, the user is redirected to the home page, where he 
     	\includegraphics[height=50mm]{images/mockups/ThirdPartyProfile.png}
         \end{figure}
 
-The Third-party, in the Request page, can swipe between individual and group, and can enable the option to subscribe to new data. While, The Individual, can see and resolve incoming request, the accepted and the rejected ones. The Third- Party, form the initial page, can also reach the view data section. Here he can see and plot the data of the accepted requests. Furthermore, swiping left and right, it can move between individual and group data.
+Third-parties can choose either individual or group request and can enable the option to subscribe to new data. The Individuals instead, can handle incoming request by accepting or rejecting them. The Third- Party, form the initial page, can also reach the view data section: here she can see and plot the data of sent requests. Furthermore, swiping left and right, it can move between individual and group data.
 \begin{figure}[!htpb]		
 		
      	\centering		
@@ -275,7 +202,7 @@ The Third-party, in the Request page, can swipe between individual and group, an
          \end{figure}
         
         \newpage
-Once in the \textit{Truck4Run}, the individual can create, watch, enroll, unroll, start or delete a run.  In the create run page, he can set all the characteristic of the run. Furthermore, he can access to an interactive map to set up the path of the rush. In the section tho watch a run, a map is showed with all the information about that rush.
+Once in the \textit{Truck4Run} section, the individual can create, watch, enroll, unroll, start or delete a run.  In the create run page, he can set all the characteristic of the run. Furthermore, he can access to an interactive map to set up the path of the run. In the section watch run there's instead a map with all the position of athletes.
 
         \begin{figure}[!htpb]
     	\centering
@@ -284,18 +211,24 @@ Once in the \textit{Truck4Run}, the individual can create, watch, enroll, unroll
     	\includegraphics[height=50mm]{images/mockups/ShowMap.png}
     	\includegraphics[height=50mm]{images/mockups/DefineTrack.png}
         \end{figure}
-        
+     
+\subsection{User eXperience}
+
 \newpage
 \section{Requirements Traceability}
 
 
 \newpage
-
 \section{Implementation, Integration and Test Plan}
 
 \newpage
-
 \section{Effort Spent}
-
+    \begin{itemize}
+        \item[-] \textbf{Davide Rutigliano: }
+        
+        \item[-] \textbf{Davide Matta: }
+        
+        \item[-] \textbf{Claudio Ferrante: }
+    \end{itemize}
 
 \end{document}
