--- a/DD/references.bib
+++ b/DD/references.bib
@@ -1,3 +1,13 @@
+@article{rasd,
+  title={Requirement Analysis and Specification Document v1.0},
+  author={Davide Rutigliano, Claudio Ferrante, Davide Matta},
+  year={2018}
+}
+@article{bradner1997key,
+  title={Key words for use in RFCs to Indicate Requirement Levels},
+  author={Bradner, Scott},
+  year={1997}
+}
 @book{archroyfielding,
   title={Architectural styles and the design of network-based software architectures},
   author={Fielding, Roy T and Taylor, Richard N},
