--- a/DD/main.tex
+++ b/DD/main.tex
@@ -144,8 +144,16 @@ Moreover, both the \textit{Application Layer} and the \textit{Presentation Layer
 \end{itemize}
 
 \subsection{Component View}
-
+\newpage
 \subsection{Deployment View}
+\comment{fix this plzzz}
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth,keepaspectratio]{images/UML/deployment_TrackMe.jpg}
+    \caption{TrackMe Deployment Diagram}
+    \label{fig:deployment_trackme}
+\end{figure}
+
 
 \subsection{Runtime View}
 
