Update with ER diagram

--- a/DD/main.tex
+++ b/DD/main.tex
@@ -150,6 +150,20 @@ Moreover, both the \textit{Application Layer} and the \textit{Presentation Layer
 \end{figure}
 
 \subsection{Component View}
+
+
+\newpage
+
+\subsubsection{Data Layer}
+
+
+\begin{figure}[!htpb]
+    \centering
+    \includegraphics[width=\textwidth,keepaspectratio]{DD/images/TM_ER.jpg}
+    \caption{ER Diagram}
+    \label{fig:ER_trackme}
+\end{figure}
+
 \newpage
 \subsection{Deployment View}
 \comment{fix this plzzz}
